# autorouting

./: pyproject.toml
examples/: router.py
src/autorouting/: __init__.py  url.py
